# OtherFiles

./: .gitignore  README.md  [形式与政策期末]我国生态环境存在的问题及解决对策.md  code.tt  decodeBase64.py  关于数学的算法探究.doc
2014_2_Homework/Flash/: php是世界上最好的语言(44.7s).swf  php是世界上最好的语言-app.xml  php是世界上最好的语言.fla  php是世界上最好的语言.swf
2014_2_Homework/Java/: answer.md  《Java语言程序设计》课程考核.docx
2014_2_Homework/离散数学/: 2.md  3.md  6.md  7.md  8.md  9.md
2014_2_Homework/算法分析与设计/: 关于数学的算法探究.doc
2015_2_Homework/Unix/hellotest/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  hello  hello.c
2015_2_Homework/Unix/hellotest/.deps/: hello.Po
2015_2_Homework/Unix/hellotest/autom4te.cache/: output.0  requests  traces.0  traces.1
DataStructTest/: phonebook  phonebook.cpp
ISCC2015/: MISC03.py
Shape/: .cproject  .project  Circle.cpp  Circle.h  Cylinder.cpp  Cylinder.h  Length.cpp  Length.h  main.cpp
md/: WeChall.md  gctf.md  hetian.md  ichunqiu30.md  iscc2016.md  isg.md  mmp.md  nsctf.md  react-router.md  websec_books.md  xdctf.md  方向.md  银杏黄_NOIP项目需求.md
php/: 1.js  writeshell.php  xsscookie.php
py/: bitcointalk.py  catchTheCourse.py  catch_uestc_course.py  crawl-rootme-questions.py  decodeBase64.py  errorcode.py  get46pic.py  getResult_46.py  get_google_group_posts.py  ingress-17171-vote.py  proxydown.py  test.html  uestc_lib_login.py
shells/: centos67_install_shadowsocks.sh  centos7.init.sh  centos7_installer.sh  delete.sh  gitupdate.sh
slides_code/: 1.php  2.php  3.php  4.php  5.php  6.php  sqli.sql
uestcMobileConfig/: index.php  uestc.php
(+135 files in other folders)
